# mqt-problemsolver

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  Kakuro_example.ipynb  Quantstar_backend.ipynb  README.md  TSP_example.ipynb  debugging.ipynb  evaluation.ipynb  kakuro.ipynb  kakuro_DIMACS_CNF.ipynb  new-scheme-test.ipynb  noxfile.py  paper_figures.ipynb  pyproject.toml  res_satellite_solver.csv  res_satellite_solver_noisy.csv  results.csv  runtime_test.py  sitecustomize.py  tmp.dimacs  tsp.ipynb  tsp_vqe.ipynb
QAO/: .flake8  .pre-commit-config.yaml  .readthedocs.yaml  CITATION.bib  LICENSE  README.md  mypy.ini  noxfile.py  pyproject.toml  test.py
QAO/.github/: contributing.rst  release-drafter.yml  support.rst
QAO/.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
QAO/.github/workflows/: cd.yml  ci.yml
QAO/docs/: Constraints.rst  DevelopmentGuide.rst  Karp.rst  ObjectiveFunction.rst  Problem.rst  Quickstart.ipynb  References.rst  Solution.rst  Solver.rst  Usage.rst  Variable.rst  conf.py  index.rst  refs.bib
QAO/scripts/Knapsack/: Knapsack.py
QAO/scripts/Knapsack/Data/: f10_l-d_kp_20_879  f2_l-d_kp_20_878  f3_l-d_kp_4_20  f4_l-d_kp_4_11  f5_l-d_kp_15_375  f6_l-d_kp_10_60  f7_l-d_kp_7_50  f8_l-d_kp_23_10000  f9_l-d_kp_5_80  knapPI_1_1000_1000_1  knapPI_1_100_1000_1  knapPI_1_2000_1000_1  knapPI_1_200_1000_1  knapPI_1_500_1000_1  knapPI_2_1000_1000_1  knapPI_2_100_1000_1  knapPI_2_2000_1000_1  knapPI_2_200_1000_1  knapPI_2_500_1000_1  knapPI_3_1000_1000_1  knapPI_3_100_1000_1  knapPI_3_2000_1000_1  knapPI_3_200_1000_1  knapPI_3_500_1000_1
QAO/scripts/linear_regression/: LinearRegression.py  PredictionResSimulatedAnnealing.csv  iris_csv.csv  simulated_annealing_linear_regression_Iris.json
QAO/src/mqt/qao/: __init__.py  constraints.py  objectivefunction.py  problem.py  solvers.py  variables.py
QAO/src/mqt/qao/karp/: __init__.py  karp_graphs.py  karp_number.py  karp_sets.py
QAO/tests/: test_evaluation.py  test_graph.py  test_number.py  test_set.py
QAO/tests/maxcut/: maxcut_3_10_1.txt  maxcut_3_10_10.txt  maxcut_3_10_2.txt  maxcut_3_10_5.txt  maxcut_3_30_1.txt  maxcut_3_30_10.txt  maxcut_3_30_2.txt  maxcut_3_30_5.txt  maxcut_3_50_1.txt  maxcut_3_50_10.txt  maxcut_3_50_2.txt  maxcut_3_50_5.txt  maxcut_3_70_1.txt  maxcut_3_70_10.txt  maxcut_3_70_2.txt  maxcut_3_70_5.txt  maxcut_3_90_10.txt  maxcut_3_90_2.txt  maxcut_3_90_5.txt  maxcut_4_10_1.txt  maxcut_4_10_10.txt  maxcut_4_10_2.txt  maxcut_4_10_5.txt  maxcut_4_30_1.txt  maxcut_4_30_10.txt  maxcut_4_30_2.txt  maxcut_4_30_5.txt  maxcut_4_50_1.txt  maxcut_4_50_10.txt  maxcut_4_50_2.txt  maxcut_4_50_5.txt  maxcut_4_70_1.txt  maxcut_4_70_10.txt  maxcut_4_70_2.txt  maxcut_4_70_5.txt  maxcut_4_90_10.txt  maxcut_4_90_2.txt  maxcut_4_90_5.txt  maxcut_5_10_1.txt  maxcut_5_10_10.txt  (+98 more)
QAO/tests/maxcutResults/: maxcut_10_10_10_sol.txt  maxcut_10_30_2_sol.txt  maxcut_10_30_5_sol.txt  maxcut_10_50_10_sol.txt  maxcut_10_50_5_sol.txt  maxcut_10_70_10_sol.txt  maxcut_10_70_5_sol.txt  maxcut_10_90_10_sol.txt  maxcut_10_90_5_sol.txt  maxcut_11_30_10_sol.txt  maxcut_11_30_5_sol.txt  maxcut_11_50_10_sol.txt  maxcut_11_70_10_sol.txt  maxcut_11_70_5_sol.txt  maxcut_11_90_10_sol.txt  maxcut_11_90_2_sol.txt  maxcut_11_90_5_sol.txt  maxcut_12_10_10_sol.txt  maxcut_12_30_10_sol.txt  maxcut_12_50_10_sol.txt  maxcut_12_50_2_sol.txt  maxcut_12_50_5_sol.txt  maxcut_12_70_10_sol.txt  maxcut_12_70_5_sol.txt  maxcut_12_90_10_sol.txt  maxcut_12_90_5_sol.txt  maxcut_4_50_5_sol.txt  maxcut_5_10_2_sol.txt  maxcut_5_50_2_sol.txt  maxcut_5_90_10_sol.txt  maxcut_6_10_1_sol.txt  maxcut_6_30_1_sol.txt  maxcut_6_50_2_sol.txt  maxcut_6_90_10_sol.txt  maxcut_7_30_5_sol.txt  maxcut_7_70_10_sol.txt  maxcut_7_90_10_sol.txt  maxcut_8_30_10_sol.txt  maxcut_8_50_10_sol.txt  maxcut_8_70_5_sol.txt  (+13 more)
QUBOMaker/: .flake8  .gitignore  .pre-commit-config.yaml  .readthedogs.yaml  CITATION.bib  LICENSE  README.md  arithmetic.py  cost_functions.py  graph.py  main.py  noxfile.py  pyproject.toml  qubo_generator.py  test.ipynb  test.py  tsp.ipynb  tsplib.py  utils.py
QUBOMaker/.github/: codecov.yml  contributing.rst  dependabot.yml  release-drafter.yml  renovate.json5  support.rst
QUBOMaker/.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md  feature_request.yml
QUBOMaker/.github/workflows/: cd.yml  ci.yml  codeql.yml  coverage.yml  deploy.yml  mypy.yml  nextjs.yml  release-drafter.yml
QUBOMaker/docs/: DevelopmentGuide.rst  Installation.rst  QUBOGenerator.rst  Quickstart.ipynb  References.rst  conf.py  index.rst  refs.bib
QUBOMaker/docs/pathfinder/: Constraints.rst  Encodings.rst  GUI.rst  JSON.rst  TSPLib.rst  index.rst
QUBOMaker/notebooks/: gr24.tsp  tsp.ipynb  tsplib.ipynb
QUBOMaker/notebooks/input/: gr17.tsp  graph  tsp.json
QUBOMaker/src/mqt-pathfinder-ui/: package-lock.json  package.json
QUBOMaker/src/mqt-pathfinder-ui/app/: edgeCollector.tsx  edgeDisplay.tsx  globals.css  graphView.tsx  layout.tsx  page.tsx  settings.ts  style.module.css  titledTextbox.tsx  toggle.tsx  toggleBag.tsx
QUBOMaker/src/mqt-pathfinder-ui/types/: react-graph.vis.d.ts
QUBOMaker/src/mqt.pathfinder.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
QUBOMaker/src/mqt/pathfinder/: cost_functions.py  graph.py  py.typed  qubo_generator.py  tsplib.py  utils.py
QUBOMaker/src/mqt/qubomaker/: __init__.py  graph.py  qubo_generator.py  tsplib.py  utils.py
QUBOMaker/src/mqt/qubomaker/pathfinder/: README.md  __init__.py  cost_functions.py  tsplib.py  (+1 more)
QUBOMaker/stubs/sympy/: __init__.pyi
QUBOMaker/stubs/sympy/core/: __init__.pyi
QUBOMaker/tests/: __init__.py  test_cost_functions.py  test_cost_functions_one_hot.py  test_graph.py  test_json_input.py  test_tsplib_input.py  utils_test.py
QUBOMaker/tests/pathfinder/: __init__.py  test_cost_functions.py  test_end_to_end.py  test_json_input.py  test_pathfinder.py  test_tsplib_input.py  utils_test.py
QUBOMaker/tests/resources/graph/: graph
QUBOMaker/tests/resources/json/: all.json  alternative_options.json  with_weight.json
QUBOMaker/tests/resources/tsplib/: tsp-5.tsp
(+1942 files in other folders)
